src/Register.css
body{
    background-image: url("https://images.unsplash.com/photo-1506744038136-46273834b3fb");
    background-position: center;
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-size: cover;
}
.title{
    font-style:oblique;
    font-size: xx-large;
    font-weight: bolder;
}
.register{
    color: red;
    background: transparent;
    backdrop-filter: blur(10px);
    width: 500px;/*400*/
    margin: 50px auto;
    margin-top:50px;/*30*/
    margin-left: 110px;
    padding-bottom: 20px;
    max-height:fit-content;
    border-radius: 10px;
    position:fixed;
    left: 400px;
    border:1px solid black;
    
}

.register input{
    backdrop-filter:none;
    color: rgba(110, 110, 110, 0.384);
    background: transparent;
    border-bottom: 2px solid;
    border-top: transparent;
    border-left: transparent;
    border-right: transparent;
    font-size: 20px;
    
    height: 45px;/*37*/
    width:300px;/*270*/
}


.register .f1,.register .f2,.register .f3,.register .f7,.register .f5{
    margin-bottom:10px;
    margin-top: 30px;
    cursor: pointer;
    
    
}
input:hover{
    transform: scale(1.02);
    
}
.register .f6{
    margin-top: 20px;
    margin-bottom: 20px;
    cursor: pointer;
    border: 1px solid white;
}

.f6:hover{
    background-color: rgb(181, 177, 177);

    transform: scale(1.08);
    
}
.l1{
    color: rgb(230, 230, 240);
    cursor: pointer;
    margin-bottom: 10px;
}
.l1:hover{
    text-decoration:underline;
    color: rgb(64, 64, 174);
}

